remove unnecessary files

--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,8 @@
         "dev": "vite",
         "dev:env": "vite --mode ",
         "prebuild": "yarn clean",
-        "build": "tsc && vite build --mode production --base=/dist/",
+        "build": "vite build --mode production --base=/dist/",
+        // "build": "tsc && vite build --mode production --base=/dist/",
         "clean": "rimraf dist",
         "serve": "vite preview",
         "test": "tsc --noEmit",
