update version + glob

--- a/ui/package.json
+++ b/ui/package.json
@@ -14,13 +14,13 @@
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
-        "@holium/design-system": "^0.1.0",
-        "@holium/tome-db": "^1.0.4",
+        "@holium/design-system": "0.1.2",
+        "@holium/tome-db": "1.2.0",
         "@mantine/core": "^5.10.4",
         "@mantine/hooks": "^5.10.4",
         "@react-hook/resize-observer": "^1.2.6",
-        "@urbit/api": "^2.0.0",
-        "@urbit/http-api": "^2.0.0",
+        "@urbit/api": "^2.3.0",
+        "@urbit/http-api": "^2.3.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "styled-components": "^5.3.6",
